fixed overflow

--- a/Styles/products.css
+++ b/Styles/products.css
@@ -15,7 +15,6 @@
 .container .left_filter, .container .dummy_right {
     vertical-align: top;
     width: 14%;
-    min-width: 200px;
 }
 
 .container table td {
